--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class="img" src="picture2.jpg">
         </section>
     </section>
-    <audio autoplay="autoplay" controls>
+    <audio autoplay="autoplay" controls="">
         <source src="audio.mp3" type="audio/ogg; codecs=vorbis">
         <source src="audio.mp3" type="audio/mpeg">
     </audio>
